<resources>
    <string name="app_name">TTUB</string>
    <string name="title_home">Home</string>
    <string name="title_tiles">Tiles</string>
    <string name="title_maps">Maps</string>
    <string name="title_sheets">Sheets</string>
    <string name="title_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>