<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tiles"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_tiles" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_sheets"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sheets" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

</menu>